crates/service/tests/formatting/snapshots/features__formatting__tab.snap
---
source: crates/service/tests/formatting/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 6,
        "character": 0
      }
    },
    "newText": "(module\n\t(func (param i32)\n\t\t(local.get 0)))\n"
  }
]
